<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1D008EFF"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="25dp">
        <TextView
            android:id="@+id/textView"
            android:layout_width="277dp"
            android:layout_height="71dp"
            android:background="@drawable/mainmenubuttonsyle"
            android:gravity="center"
            android:onClick="goTimeToPrice"
            android:text="@string/menu1_name"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:layout_margin="5dp"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="277dp"
            android:layout_height="71dp"
            android:background="@drawable/mainmenubuttonsyle"
            android:gravity="center"
            android:onClick="goProportionalPrice"
            android:text="@string/menu2_name"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:layout_margin="5dp"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="277dp"
            android:layout_height="71dp"
            android:background="@drawable/mainmenubuttonsyle"
            android:gravity="center"
            android:onClick="goTimeCalc"
            android:text="@string/menu3_name"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:layout_margin="5dp"/>

</LinearLayout>