<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".SecondPartDetails">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layoutdefiniton"
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="159dp"
                    android:layout_height="match_parent"
                    android:background="#979EA6"
                    android:gravity="center"
                    android:paddingLeft="5dp"
                    android:text="@string/price_part"
                    android:textAlignment="textStart"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:background="#979EA6"
                    android:gravity="center"
                    android:text="@string/ratio_name"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#979EA6"
                    android:gravity="center"
                    android:text="@string/arbitrager_price_name"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout35000"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="159dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingLeft="5dp"
                    android:text="₺50.000 için"
                    android:textAlignment="textStart"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvr35"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingLeft="2dp"
                    android:text="%9"
                    android:textAlignment="textStart"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvp35"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="-"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout45000"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="159dp"
                    android:layout_height="match_parent"
                    android:background="#22000000"
                    android:gravity="center"
                    android:paddingLeft="5dp"
                    android:text="₺80.000 için"
                    android:textAlignment="textStart"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvr45"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:background="#22000000"
                    android:gravity="center"
                    android:paddingLeft="2dp"
                    android:text="%7.5"
                    android:textAlignment="textStart"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvp45"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#22000000"
                    android:gravity="center"
                    android:text="-"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout80000"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="159dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingLeft="5dp"
                    android:text="₺130.000 için"
                    android:textAlignment="textStart"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvr80"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingLeft="2dp"
                    android:text="%6"
                    android:textAlignment="textStart"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvp80"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="-"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout240000"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="159dp"
                    android:layout_height="match_parent"
                    android:background="#22000000"
                    android:gravity="center"
                    android:paddingLeft="5dp"
                    android:text="₺260.000 için"
                    android:textAlignment="textStart"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvr240"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:background="#22000000"
                    android:gravity="center"
                    android:paddingLeft="2dp"
                    android:text="%4.5"
                    android:textAlignment="textStart"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvp240"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#22000000"
                    android:gravity="center"
                    android:text="-"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout600000"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView27"
                    android:layout_width="159dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingLeft="5dp"
                    android:text="₺780.000 için"
                    android:textAlignment="textStart"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvr600"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingLeft="2dp"
                    android:text="%3"
                    android:textAlignment="textStart"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvp600"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="-"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout750000"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="159dp"
                    android:layout_height="match_parent"
                    android:background="#22000000"
                    android:gravity="center"
                    android:paddingLeft="5dp"
                    android:text="₺1.040.000 için"
                    android:textAlignment="textStart"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvr750"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:background="#22000000"
                    android:gravity="center"
                    android:paddingLeft="2dp"
                    android:text="%2.5"
                    android:textAlignment="textStart"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvp750"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#22000000"
                    android:gravity="center"
                    android:text="-"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout1250000"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="159dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingLeft="5dp"
                    android:text="₺2.080.000 için"
                    android:textAlignment="textStart"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvr1250"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingLeft="2dp"
                    android:text="%1.5"
                    android:textAlignment="textStart"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvp1250"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="-"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout3000000"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView25"
                    android:layout_width="159dp"
                    android:layout_height="match_parent"
                    android:background="#22000000"
                    android:gravity="center"
                    android:paddingLeft="5dp"
                    android:text="₺4.160.000 üzeri"
                    android:textAlignment="textStart"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvr3000"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:background="#22000000"
                    android:gravity="center_vertical"
                    android:paddingLeft="2dp"
                    android:text="%1"
                    android:textAlignment="textStart"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvp3000"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#22000000"
                    android:gravity="center"
                    android:text="-"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView37"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="#F5F5F5"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/explanation_name"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvExplanation"
                android:layout_width="match_parent"
                android:layout_height="264dp"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:text='₺10.000.000,00 Anlaşma Tutarlı, Bir arabulucu görev yaptığı, İş Hukuku Uyuşmazlığında, 2 taraflı işlerde" arabuluculuk ücreti hesabı:'
                android:textColor="#000000"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#F4F6F8"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/totalprice"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="#2B5892"
                    android:gravity="center_vertical"
                    android:paddingLeft="5dp"
                    android:text="Toplam Tutar :"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>